syntax="proto3";

package com.github.amangupta00.grpcdemo01;

option java_package="com.github.amangupta00.grpcdemo01.stubs.user";
option java_multiple_files=true;

service UserService{
  rpc getUserDetails(UserRequest) returns(UserResponse);
  rpc insertUser(InsertUserRequest) returns(UserResponse);
}

message UserRequest{
  string username=1;
}

message UserResponse{
  int32 id = 1;
  string username = 2;
  string name = 3;
  int32 age = 4;
  string gender= 5;
}

message InsertUserRequest{
  int32 id = 1;
  string username = 2;
  string name = 3;
  int32 age = 4;
  string gender= 5;
}

//enum Gender{
//  MALE=0;
//  FEMALE=1;
//  OTHERS=2;
//}